CAMEL-14711 - Disable RabbitMQ Java serialization by default (#3633)